--- a/src/style.css
+++ b/src/style.css
@@ -135,3 +135,13 @@ h2 {
 .contact-info:first-child {
     font-size: 2rem;
 }
+
+.menu {
+    grid-area: 2/1 / 4/2;
+    justify-self: center;
+    align-self: flex-start;
+}
+
+.menu > p {
+    font-size: 1.2rem;
+}
