Done Css, review code to complet

--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,31 @@
-/* normalization */
+@font-face {
+    font-family: roboto;
+    src: url(./robotoFont/Roboto-Regular.ttf);
+}
+@font-face {
+    font-family: roboto-bold;
+    src: url(./robotoFont/Roboto-Bold.ttf);
+}
+
+:root {
+    --color-brown: #759283;
+    --title-color: #ba9c78;
+
+    --title-size: 2rem;
+    --button-size: 1.4rem;
+    --second-title-size: 1.4rem;
+    --text-size: 1.2rem;
+    --footer-text-size: 0.8rem;
+}
 
 * {
     border: rgba(0, 255, 26, 0.274) solid 0px;
     box-sizing: border-box;
+    font-family: roboto;
 }
 
 body {
-    background-image: url(./image/coffee-beans-background.jpeg);
+    background-image: url(./image/coffee-beans-true-background.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 
@@ -16,9 +35,9 @@ body {
 }
 
 #content {
-    background-color: rgba(0, 0, 0, 0.85);
+    background-color: rgba(0, 0, 0, 0.9);
     height: 100vh;
-    margin: 0 20%;
+    margin: 0 18%;
 
     display: flex;
     flex-direction: column;
@@ -49,16 +68,17 @@ body {
 .footer > h4 {
     margin: 0;
     padding: 1rem 0;
-    font-size: 0.8rem;
+    font-size: var(--footer-text-size);
 }
 
 /* header button  */
 button {
     background-color: transparent;
     color: white;
-    font-size: 1.4rem;
+    font-size: var(--button-size);
     font-weight: 700;
-    color: #c3aa8f;
+    color: var(--color-brown);
+    font-family: roboto-bold;
 }
 
 /* main grid item */
@@ -68,15 +88,15 @@ h2 {
     justify-self: center;
     align-self: center;
     margin: 0;
-    padding: 0;
-    font-size: 2rem;
+    padding: 0 0 1rem 0;
+    font-size: var(--title-size);
 }
 
 .img-coffee-maker {
     grid-area: 2/2 / 3/3;
     background-image: url(./image/coffee-maker.jpeg);
     background-repeat: no-repeat;
-    background-size: auto 120%;
+    background-size: contain;
     background-position: left;
 }
 
@@ -84,7 +104,7 @@ h2 {
     grid-area: 3/1 / 4/2;
     background-image: url(./image/coffee_book.jpeg);
     background-repeat: no-repeat;
-    background-size: auto 120%;
+    background-size: contain;
     background-position: right;
 }
 
@@ -95,53 +115,92 @@ h2 {
 }
 
 .description {
-    padding: 1rem 1rem 1rem 1rem;
-    align-items: flex-end;
+    padding: 0rem 1rem 1rem 3rem;
+    margin: 0;
+
+    justify-self: flex-end;
+    align-self: flex-start;
+
+    font-size: var(--text-size);
+    line-height: 1.7rem;
+    text-align: end;
+    white-space: pre;
+    color: var(--title-color);
+}
+.description > h3 {
+    margin: 0;
 }
 
-.description > h3 {
+.description > p {
     margin: 0;
 }
 
 .hour {
     grid-area: 3/2 / 4/3;
-
     padding: 1rem 1rem 1rem 1rem;
     line-height: 1.8rem;
-    font-size: 1.3rem;
+    font-size: var(--text-size);
 }
 
 .hour > h3 {
     margin: 0;
 }
 
+h3 {
+    font-size: var(--second-title-size);
+    color: var(--title-color);
+}
+
 /* contact page  */
 .contact-info {
-    grid-area: 2/1 / 4/3;
+    grid-area: 2/1 / 3/3;
     justify-self: center;
     text-align: center;
     margin-top: 4rem;
+    margin-bottom: 1rem;
 
     display: flex;
     flex-direction: column;
-    gap: 3rem;
+    gap: 2rem;
 }
 
 .contact-info > p {
-    font-size: 1.5rem;
+    font-size: var(--second-title-size);
     margin: 0;
 }
 
 .contact-info:first-child {
-    font-size: 2rem;
+    font-size: var(--title-size);
+    color: var(--title-color);
+}
+
+.contact-img {
+    grid-area: 3/1/4/3;
+    background-image: url(./image/neon-sign-4343663_1920.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 39%;
 }
 
 .menu {
     grid-area: 2/1 / 4/2;
     justify-self: center;
-    align-self: flex-start;
+    align-self: center;
 }
 
 .menu > p {
-    font-size: 1.2rem;
+    font-size: var(--text-size);
+}
+
+.menu-img1 {
+    grid-area: 2/2/4/3;
+    margin: 3rem 2rem 3rem 0rem;
+
+    opacity: 0.7;
+    background-image: url(./image/coffee-bean.jpeg);
+    background-repeat: no-repeat;
+    background-size: auto 120%;
+    background-position: bottom;
+
+    border-radius: 15px;
 }
